--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,7 @@ packages = [{include = "quanttide_devops"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+gitpython = "^3.1.40"
+semantic-version = "^2.10.0"
+pygithub = "^2.1.1"
+coding-devops-sdk-py = "^0.1.1"
