--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,6 @@ python = "^3.9"
 gitpython = "^3.1.40"
 semantic-version = "^2.10.0"
 pygithub = "^2.1.1"
-coding-devops-sdk-py = "^0.1.1"
+coding-devops-sdk-py = "^0.1.2"
+pydantic = "^2.5.2"
+typer = "^0.9.0"
