--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "quanttide-devops-python"
+name = "quanttide-devops"
 version = "0.1.0-beta.1"
 description = "Python SDK for Specification of QuantTide DevOps"
 authors = ["QuantTide Inc. <opensource@quanttide.com>"]
